# mobile-shared-regions

./: .gitignore  .gitlab-ci.yml  PIARegions.podspec  PIARegionsModule.podspec  README.md  Regions.podspec  build.gradle  create-framework.sh  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: build-android.yaml
.kotlin/metadata/kotlinCInteropLibraries/: regions-iosArm64Cinterop-fixUndefinedSymbolsMain-1.7.1-njRInA.klib  regions-iosSimulatorArm64Cinterop-fixUndefinedSymbolsMain-1.7.1--Rqodw.klib  regions-iosX64Cinterop-fixUndefinedSymbolsMain-1.7.1-IQoO2g.klib  (+3 more)
app/: app.podspec  build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
iosApp/iosApp/: ViewController.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosAppTests/: LocalizationTests.swift  PingTests.swift  VerifyTests.swift
regions/: build.gradle  build.gradle.kts
regions/src/androidMain/cpp/: CMakeLists.txt  bindings.cpp
regions/src/androidMain/cpp/kapps/arm64-v8a/inc/kapps_regions/: region.h  regions.h
regions/src/androidMain/cpp/kapps/armeabi-v7a/inc/kapps_core/: core.h  stringslice.h
regions/src/androidMain/cpp/kapps/armeabi-v7a/inc/kapps_regions/: dynamicrole.h  metadata.h  server.h  service.h
regions/src/androidMain/cpp/kapps/x86/inc/kapps_core/: ipaddress.h
regions/src/androidMain/cpp/kapps/x86/inc/kapps_regions/: countrydisplay.h  dedicatedip.h  displaytext.h
regions/src/androidMain/cpp/kapps/x86_64/: version.txt
regions/src/androidMain/cpp/kapps/x86_64/inc/kapps_net/: firewall.h
regions/src/androidMain/cpp/kapps/x86_64/inc/kapps_regions/: manualregion.h  regiondisplay.h  regionlist.h
regions/src/androidMain/cpp/utils/: utils.h
(+155 files in other folders)
